# app-kunkun

./: README.md  pnpm-lock.yaml  repo-stats.md
apps/desktop/: package.json
apps/desktop/components/ExtTemplate/: ListDetail.vue  Metadata.vue
apps/desktop/components/Metadata/: label.vue  link.vue  separator.vue  tag.vue  tags.vue
apps/desktop/layouts/: default.vue
apps/desktop/lib/init/: deeplink.ts
apps/desktop/lib/utils/: tauri-events.ts
apps/desktop/pages/: index.vue  worker-ext.vue
apps/desktop/pages/dev/: index.vue
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/setup/: deeplink.rs
extensions/demo-worker-template-ext/src/: index.ts
