[package]
name = "kunkun-desktop"
version = "0.0.0"
description = "Kunkun Desktop App"
authors = ["Huakun Shen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [
    "macos-private-api",
    "protocol-asset",
    "image-png",
    "image-ico",
    "tray-icon",
    "devtools",
] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
mdns-sd = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
urlencoding = "2.1.3"
tauri-plugin-process = "2.0.1"
tauri-plugin-shellx = "2.0.11"
tauri-plugin-fs = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-notification = "2.0.1"
tauri-plugin-os = "2.0.1"
tauri-plugin-http = "2.0.1"
tauri-plugin-upload = "2.0.1"
tauri-plugin-jarvis = { path = "../../../packages/tauri-plugin-jarvis" }
tauri-plugin-network = { workspace = true }
tauri-plugin-system-info = { path = "../../../vendors/tauri-plugin-system-info" }
tauri-plugin-clipboard = { workspace = true }
tauri-plugin-store = "2.0.1"
tauri-plugin-deep-link = "2"
tauri-plugin-log = { version = "2.0.1", features = ["colored"] }
zip = "2.1.3"


[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2.7"


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2.0.1"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2.0.2"
